--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "air-datepicker": "^2.2.3",
+    "jquery": "^3.4.1"
+  }
 }
