--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "lightslider": "^1.1.6"
   }
 }
