--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "sass-loader": "^8.0.0",
@@ -37,6 +37,7 @@
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "jquery": "^3.4.1",
+    "lightgallery.js": "^1.1.3",
     "lightslider": "^1.1.6"
   }
 }
