--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
+    "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
     "lightgallery.js": "^1.1.3",
     "lightslider": "^1.1.6"
